Phase 1: reify from CompiledClass, at parity with the editable model
ModelStatementReifications gains deriveOne(CompiledClass, CompiledProjectModel)
(and a derive(CompiledProjectModel) overload) reading a resolved compiled class
— statement source, effective fields, canonical identity already computed, so no
findClass / effective* / synthesized-view calls. The editable-model overload is
untouched; consumers migrate in Phase 2.

The real-model parity canary caught a genuine CompiledFieldSource bug:
Set.copyOf gives an unordered set, but the editable model uses LinkedHashSet and
the QID sets become VALUES clauses — so compiled valueQids came out in a
different order, breaking both parity and query determinism. Fixed to preserve
insertion order.

OscarReifyTest asserts the two derivations produce an equal Reification, with the
value field carrying multiple ordered allowedQids so the ordering fix can't
silently regress (verified: the test fails under Set.copyOf). Confirmed
byte-for-byte parity on the live oscarnominations model too. 248 green.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>